# growtez-examos

./: .gitignore  README.md  apply_migration.sql  apply_migration_2.sql  apply_migration_3.sql  apply_migration_4.sql  fix_schema.js  modify_schema.js  modify_schema_local.js  package-lock.json  package.json  pnpm-lock.yaml  remove_exam_students_refs.js  run-build.bat  run-dev.bat
apps/desktop-app/: index.html  package.json
apps/desktop-app/docs/: login_imple_plan.md
apps/desktop-app/src/: App.tsx  main.tsx  styles.css
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/icons/: icon.icns
apps/desktop-app/src-tauri/src/: main.rs
apps/desktop-app/src/components/: Calculator.tsx  ExamInterface.tsx  Login.tsx  MathRenderer.tsx  Numpad.tsx  VirtualKeyboard.tsx  WaitingRoom.tsx
apps/desktop-app/src/lib/: deviceId.ts  supabase.ts
apps/landing-page/: next.config.ts  package.json  tailwind.config.ts
apps/landing-page/app/: layout.tsx  page.tsx
apps/web-panel/: SQL_UPDATE_REQUIRED.txt  migrate-colors.js  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.tsbuildinfo  update-plans.js
apps/web-panel/.next/: trace
apps/web-panel/src/: global.d.ts  middleware.ts
supabase/migrations/: 001_schema.sql  002_profile_features.sql  002_rls.sql  003_bill_credit_remove.sql  20260709165228_update_plan_type.sql  20260709171128_drop_max_students.sql  20260710224500_add_exam_instructions.sql  20260711000000_exam_templates.sql
test/src-super-admin/components/: QuickCreateDrawer.jsx
(+109 files in other folders)
